# VSA-Recoverability-Atlas

./: .gitattributes  .gitignore  CGRN-HSR_research_hypothesis.md  CITATION.cff  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE_SCOPE.md  README.md  REPRODUCIBILITY.md  RESEARCH_HISTORY.md  RESEARCH_STATUS.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pylock.competitors.toml  pylock.level3.toml  pylock.toml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: CLEAN_CHECKOUT_CI_REPAIR.md  LEVEL1F2_BCF_CONTRACT.md  LEVEL1F2_BCF_ENVIRONMENT.md  LEVEL1F_ATTENTION_PARITY.md  LEVEL1_RESEARCH_CLOSURE.md  LEVEL2B0_ARCHITECTURE_OVERLAP.md  LEVEL2B0_PRIOR_ART_MATRIX.md  LEVEL2B0_RESEARCH_SEAM.md  LEVEL2B_RESEARCH_CLOSURE.md  LEVEL2C_PORTABLE_CONTEXT_POLICY.md  LEVEL3_1_DEVELOPMENT_BOUNDARY.md  LEVEL3_1_NATIVE_REPRODUCTION.md  LEVEL3_2B_MAP_BUDGET_ROBUSTNESS.md  LEVEL3_2_CLEAN_U1_CONFIRMATION.md  LEVEL3_3_LINEAR_CODE_REPRODUCTION.md  LEVEL3_3_NECO_CONTRACT_EXTRACTION.md  LEVEL3_4_ALGEBRAIC_BASELINE_CLOSURE.md  LEVEL3_5A_NOISE_BASELINE_MATRIX.md  LEVEL3_5A_NOISE_CONTRACTS.md  LEVEL3_5B_CONTRACT_GATE_CONSISTENCY_REPAIR.md  LEVEL3_5B_DEV_NATIVE_NOISE_FRONTIERS.md  LEVEL3_5B_FROZEN_PROTOCOL_DRAFT.md  LEVEL3_5B_HELDOUT_NOISE_CONFIRMATION.md  LEVEL3_5B_HELDOUT_PROTOCOL.md  LEVEL3_5B_HELDOUT_V2_NOISE_CONFIRMATION.md  LEVEL3_5B_HELDOUT_V3_NOISE_CONFIRMATION.md  LEVEL3_5B_PROSPECTIVE_GATE_SPECIFICATION.md  LEVEL3_5B_PROTOCOL_REPAIR_AND_REFREEZE.md  LEVEL3_CODEBOOK_COMPRESSED_RESIDUE_AUDIT.md  LEVEL3_CODEBOOK_COMPRESSED_RESIDUE_PROTOCOL.md  LEVEL3_DECODER_CERTIFIED_CODEBOOK_AUDIT.md  LEVEL3_DECODER_CERTIFIED_CODEBOOK_PROTOCOL.md  LEVEL3_DECODER_GUIDED_TAG_REPAIR_AUDIT.md  LEVEL3_DECODER_GUIDED_TAG_REPAIR_PROTOCOL.md  LEVEL3_EXACT_CAPSULE_CONTRACT_CLOSURE.md  LEVEL3_FIRST_ORDER_TRACE_COACTIVATION.md  LEVEL3_FROZEN_BENCHMARK_PROTOCOL.md  LEVEL3_LAZY_TRACE_ADDRESSING_STAGE_A.md  LEVEL3_LAZY_TRACE_ADDRESSING_STAGE_A1.md  LEVEL3_LAZY_TRACE_ADDRESSING_STAGE_A1_ERRATUM.md  (+12 more)
experiments/: codebook_residue.py  decoder_certified_codebook.py  decoder_guided_tag_repair.py  exact_capsule_contract_closure.py  first_order_trace_coactivation.py  lazy_trace_addressing_stage_a.py  lazy_trace_addressing_stage_a1.py  lazy_trace_addressing_stage_a2a.py  level1a_confirmation_and_controls.py  level1a_global_baseline.py  level1b1_level1c.py  level1c1_level1d.py  level1e1_warm_start.py  level1e_selective_policy.py  level1f3_single_product_shootout.py  level1f4_analysis.py  level1f_holovec_audit.py  level2a_temporal_memory.py  level2b0_prior_art_audit.py  level2c_splink_context_policy.py  level3_0_substrate_audit.py  level3_1_native_envelope.py  level3_2_clean_u1_confirmation.py  level3_2b_map_budget_robustness.py  level3_3_neco_reproduction.py  level3_4_algebraic_baselines.py  level3_5a_noise_audit.py  level3_5b_contract_gate_consistency_repair.py  level3_5b_gate_specification.py  level3_5b_heldout_confirmation.py  level3_5b_heldout_v2_confirmation.py  level3_5b_heldout_v3_confirmation.py  level3_5b_native_noise_frontiers.py  level3_5b_protocol_repair.py  oracle_portfolio_complementarity.py  self_describing_record.py
paper/: BIBLIOGRAPHY_HARDENING_REPORT.md  BUILDING.md  CITATION_AUDIT.md  CLAIM_TRACEABILITY.md  EXTERNAL_REVIEW_BUNDLE.md  EXTERNAL_REVIEW_LOG.csv  EXTERNAL_REVIEW_TARGETS.md  FIGURE_MANIFEST.yaml  LITERATURE_SCREENING_AUDIT.md  OWNER_METADATA_FORM.md  OWNER_REVIEW_CHECKLIST.md  PREPRINT_PLATFORM_DECISION.md  RED_TEAM_RESPONSE.md  RED_TEAM_REVIEW.md  RELEASE_CANDIDATE_MANIFEST.yaml  REVIEWER_RISK_REGISTER.md  SECRET_SCAN_PREPARATION.md  SYSTEMATIC_REVIEW_PROTOCOL.md  VENUE_CANDIDATES.md  architectural_decision_guide.md  claim_ledger.md  claim_ledger.yaml  (+21 more)
(+459 files in other folders)
