[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "cgrn-hsr"
version = "0.0.0"
description = "Level 0 dependency and provenance bootstrap for the CGRN-HSR research hypothesis."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "galois>=0.4.11,<0.5",
    "numpy>=2.4,<2.5",
    "pytest>=9.1,<9.2",
    "torch>=2.12,<2.13",
    "torch-hd>=5.8,<5.9",
]

[project.optional-dependencies]
competitors = [
    "holovec[torch]>=1.0.2,<1.1",
]
level3 = [
    "minigrid>=3.1,<3.2",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "optional: requires an optional dependency that is not part of the core Level 0 lock",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
