[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "vsa-recoverability-atlas"
version = "0.0.0"
description = "A reproducible empirical atlas of capacity, factorization, repair, structured recovery, negative results, and abstention in Vector Symbolic Architectures."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "galois>=0.4.11,<0.5",
    "numpy>=2.4,<2.5",
    "pytest>=9.1,<9.2",
    "torch>=2.12,<2.13",
    "torch-hd>=5.8,<5.9",
]

[project.optional-dependencies]
competitors = [
    "holovec[torch]>=1.0.2,<1.1",
]
retrieval = [
    "faiss-cpu>=1.14,<1.15",
]
level3 = [
    "minigrid>=3.1,<3.2",
]

[project.urls]
Homepage = "https://github.com/<owner>/vsa-recoverability-atlas"
Documentation = "https://github.com/<owner>/vsa-recoverability-atlas/blob/main/README.md"
Repository = "https://github.com/<owner>/vsa-recoverability-atlas"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "optional: requires an optional dependency that is not part of the core Level 0 lock",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
