[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "vsa-recoverability-atlas"
version = "0.1.0"
description = "A reproducible empirical atlas of capacity, factorization, repair, structured recovery, negative results, and abstention in Vector Symbolic Architectures."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "galois>=0.4.11,<0.5",
    "numpy>=2.4,<2.6",
    "torch>=2.12,<2.13",
    "torch-hd>=5.8,<5.9",
]

[project.optional-dependencies]
dev = [
    "Markdown>=3.10,<3.11",
    "holovec[torch]>=1.0.2,<1.1",
    "matplotlib>=3.11,<3.12",
    "minigrid>=3.1,<3.2",
    "pypdf>=6.13,<6.14",
    "PyYAML>=6.0.3,<6.1",
    "pytest>=9.1,<9.2",
]
publication = [
    "Markdown>=3.10,<3.11",
    "matplotlib>=3.11,<3.12",
    "pypdf>=6.13,<6.14",
    "PyYAML>=6.0.3,<6.1",
]
competitors = [
    "holovec[torch]>=1.0.2,<1.1",
]
retrieval = [
    "faiss-cpu>=1.14,<1.15",
]
level3 = [
    "minigrid>=3.1,<3.2",
]

[project.urls]
Homepage = "https://github.com/HexaPlexus/VSA-Recoverability-Atlas"
Documentation = "https://github.com/HexaPlexus/VSA-Recoverability-Atlas/blob/publication/preprint-v1/README.md"
Repository = "https://github.com/HexaPlexus/VSA-Recoverability-Atlas"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "optional: requires an optional dependency that is not part of the core Level 0 lock",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
